<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnthumbsup"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_19pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnarrowleft"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_weight="1.0"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearHead"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageArrowleft"
                        android:layout_height="@dimen/_14pxh"
                        android:layout_marginBottom="@dimen/_9pxv"
                        android:layout_marginStart="@dimen/_5pxh"
                        android:layout_marginTop="@dimen/_5pxv"
                        android:layout_width="@dimen/_24pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowleft"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtOne"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_69pxh"
                        android:layout_weight="0.84"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl"
                        style="@style/txtRobotoromanmedium24" tools:text="@string/lbl"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout android:id="@+id/linearSetting1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_35pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.85"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/msg"
                    style="@style/txtRobotoromanregular16" tools:text="@string/msg"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchMaterialToggleButton"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_weight="0.15" android:layout_width="0dp"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearSetting2"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtThree"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.86"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/msg2"
                    style="@style/txtRobotoromanregular16" tools:text="@string/msg2"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchMaterialToggleButtonOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_weight="0.14" android:layout_width="0dp"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearSetting3"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtFour"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.85"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/msg3"
                    style="@style/txtRobotoromanregular16" tools:text="@string/msg3"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchMaterialToggleButtonTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_weight="0.15" android:layout_width="0dp"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearSupport"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_100cornerRadius">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtFive"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_66pxh"
                    android:layout_marginStart="@dimen/_66pxh"
                    android:layout_marginTop="@dimen/_31pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@string/msg4"
                    style="@style/txtRobotoromanregular16" tools:text="@string/msg4"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtWeburl"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_28pxv"
                    android:layout_marginEnd="@dimen/_66pxh"
                    android:layout_marginStart="@dimen/_66pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_support_fox_ru"
                    style="@style/txtRobotoromanmedium24_1" tools:text="@string/lbl_support_fox_ru"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btn"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_22pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_22pxv"
                android:singleLine="true" android:text="@string/msg5"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/msg5"/>
        </LinearLayout>
        <FrameLayout android:gravity="start"
            android:id="@+id/frameBottombar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" style="@style/groupStylegray_101">
            <LinearLayout android:id="@+id/linearRowthumbsup"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_14pxv"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageThumbsup"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_71pxh"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_thumbsup"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_thumbsup"/>
                <ImageView android:id="@+id/imageUser"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_86pxh"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_user"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
                <ImageView android:id="@+id/imageArrowleftOne"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginEnd="@dimen/_71pxh"
                    android:layout_marginStart="@dimen/_86pxh"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft_bluegray_400"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_bluegray_400"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
