<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearPersonalarea"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_18pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnnavigationgl"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_weight="1.0"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearHead"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageNavigationGl"
                        android:layout_height="@dimen/_18pxh"
                        android:layout_marginBottom="@dimen/_6pxv"
                        android:layout_marginStart="@dimen/_3pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="@dimen/_18pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_navigationgl"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_navigationgl"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtLanguage"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_91pxh"
                        android:layout_weight="0.73"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl4"
                        style="@style/txtRobotoromanmedium24_2" tools:text="@string/lbl4"/>
                    <ImageView android:id="@+id/imageIcon"
                        android:layout_height="@dimen/_18pxh"
                        android:layout_marginBottom="@dimen/_6pxv"
                        android:layout_marginEnd="@dimen/_3pxh"
                        android:layout_marginStart="@dimen/_91pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="@dimen/_18pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_icon"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_icon"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <TextView android:ellipsize="end" android:id="@+id/txtUser"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_34pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_user2"
                style="@style/txtRobotoromanregular24" tools:text="@string/lbl_user2"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRoketcard"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_100cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/msg6"
                    style="@style/txtRobotoromanregular16" tools:text="@string/msg6"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTwoHundredTwentyOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@string/msg_22_1"
                    style="@style/txtRobotoromanmedium24_1" tools:text="@string/msg_22_1"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btn"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20pxv"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_28pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_22pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_22pxv"
                    android:singleLine="true"
                    android:text="@string/lbl7"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl7"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearNews1"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtSix"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_71pxv"
                    android:layout_width="match_parent"
                    android:text="@string/msg7"
                    style="@style/txtRobotoromanbold16" tools:text="@string/msg7"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTwoHundredTwentyOneOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_23pxv"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/msg_22_1"
                    style="@style/txtRobotoromanregular12" tools:text="@string/msg_22_1"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowarrowdown"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/linearButton"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:orientation="horizontal" style="@style/groupStylegray_100cornerRadius">
                    <ImageView android:id="@+id/imageArrowdown"
                        android:layout_height="@dimen/_13pxh"
                        android:layout_marginBottom="@dimen/_19pxv"
                        android:layout_marginStart="@dimen/_37pxh"
                        android:layout_marginTop="@dimen/_19pxv"
                        android:layout_width="@dimen/_15pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowdown"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowdown"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtSeven"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_17pxv"
                        android:layout_marginEnd="@dimen/_34pxh"
                        android:layout_marginStart="@dimen/_14pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_weight="0.77"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl8"
                        style="@style/txtRobotoromanregular16_2" tools:text="@string/lbl8"/>
                </LinearLayout>
                <EditText
                    android:background="@drawable/rectangle_bg_gray_100_radius_16"
                    android:drawablePadding="@dimen/_13pxh"
                    android:drawableStart="@drawable/img_interface_settings"
                    android:ellipsize="end" android:hint="@string/lbl"
                    android:id="@+id/etButton" android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_18pxh"
                    android:paddingStart="@dimen/_19pxh"
                    android:paddingTop="@dimen/_17pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/gray_500"
                    style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
            </LinearLayout>
        </LinearLayout>
        <FrameLayout android:gravity="start"
            android:id="@+id/frameBottombar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" style="@style/groupStylegray_101">
            <LinearLayout android:id="@+id/linearRowthumbsup"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_14pxv"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageThumbsup"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_71pxh"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_thumbsup"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_thumbsup"/>
                <ImageView android:id="@+id/imageUserOne"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_86pxh"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_user"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginEnd="@dimen/_71pxh"
                    android:layout_marginStart="@dimen/_86pxh"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft_bluegray_400"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_bluegray_400"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
