<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnthumbsup"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_83pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumncat"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_weight="1.0"
            android:layout_width="match_parent" android:orientation="vertical">
            <ImageView android:id="@+id/imageCat"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_186pxh"
                android:layout_marginEnd="@dimen/_67pxh"
                android:layout_marginStart="@dimen/_67pxh"
                android:layout_width="@dimen/_186pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_cat"
                tools:ignore="ContentDescription" tools:src="@drawable/img_cat"/>
            <EditText
                android:background="@drawable/rectangle_bg_gray_100_border_gray_400_7f_radius_16"
                android:ellipsize="end" android:hint="@string/lbl_user"
                android:id="@+id/etForm" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_48pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_22pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_22pxv"
                android:singleLine="true"
                android:textColorHint="@color/bluegray_900"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_gray_100_radius_16"
                android:ellipsize="end" android:hint="@string/lbl2"
                android:id="@+id/etFormOne" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_21pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_23pxv"
                android:singleLine="true"
                android:textColorHint="@color/gray_300"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btn"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_22pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_22pxv"
                android:singleLine="true" android:text="@string/lbl3"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl3"/>
        </LinearLayout>
        <FrameLayout android:gravity="start"
            android:id="@+id/frameBottombar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" style="@style/groupStylegray_101">
            <LinearLayout android:id="@+id/linearRowthumbsup"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_14pxv"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageThumbsup"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_71pxh"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_thumbsup"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_thumbsup"/>
                <ImageView android:id="@+id/imageUser"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_86pxh"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_user"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginEnd="@dimen/_71pxh"
                    android:layout_marginStart="@dimen/_86pxh"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft_bluegray_400"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_bluegray_400"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
